@@ -1,26 +1,28 @@
 package com.kyn.user.module.service;
 
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 import org.redisson.api.RMapCacheReactive;
 import org.redisson.api.RedissonClient;
 import org.springframework.http.HttpStatus;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import com.kyn.user.base.dto.JwtRequestDto;
 import com.kyn.user.base.dto.ResponseDto;
+import com.kyn.user.base.enums.Role;
 import com.kyn.user.base.exception.InvalidTokenException;
 import com.kyn.user.base.security.JwtTokenProvider;
+import com.kyn.user.module.dto.UserAuthDto;
 import com.kyn.user.module.dto.UserInfoDto;
 import com.kyn.user.module.exception.InvalidCredentialsException;
-import com.kyn.user.module.exception.UserNotFoundException;
 import com.kyn.user.module.repository.UserAuthRepository;
 import com.kyn.user.module.repository.UserInfoRepository;
 import com.kyn.user.module.service.interfaces.AuthenticationService;
+import com.kyn.user.module.service.interfaces.UserSearchService;
 
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.Jws;
@@ -29,51 +31,34 @@ import reactor.core.publisher.Mono;
 @Service
 public class AuthenticationServiceImpl implements AuthenticationService {
 
-    private final UserInfoRepository userInfoRepository;
-    private final UserAuthRepository userAuthRepository;
     private final PasswordEncoder passwordEncoder;
+    private final UserSearchService userSearchService;
     private final JwtTokenProvider jwtTokenProvider;
     private final RMapCacheReactive<String, Boolean> jwtBlacklistMap;
 
-    public AuthenticationServiceImpl(UserInfoRepository userInfoRepository, UserAuthRepository userAuthRepository,
-     PasswordEncoder passwordEncoder, JwtTokenProvider jwtTokenProvider, RedissonClient redissonClient) {
-        this.userInfoRepository = userInfoRepository;
-        this.userAuthRepository = userAuthRepository;
+    public AuthenticationServiceImpl( PasswordEncoder passwordEncoder, JwtTokenProvider jwtTokenProvider,
+                                 RedissonClient redissonClient, UserSearchService userSearchService) {
         this.passwordEncoder = passwordEncoder;
+        this.userSearchService = userSearchService;
         this.jwtTokenProvider = jwtTokenProvider;
         this.jwtBlacklistMap = redissonClient.reactive().getMapCache("blacklist:id");
     }
 
     @Override
-    public Mono<ResponseDto<String>> login(UserInfoDto userInfoDto) {
-            return Mono.empty(); /* userInfoRepository.findByEmail(userInfoDto.getEmail())
-                            .switchIfEmpty(Mono.error(new UserNotFoundException()))
-                            .flatMap(userInfo -> {
-                                    if (!passwordEncoder.matches(userInfoDto.getPassword(),
-                                                                userInfo.getPassword())) {
-                                            return Mono.error(new InvalidCredentialsException());
-                                    }
+    public Mono<String> login(UserInfoDto userInfoDto) {
+        return userSearchService.findLoginUser(userInfoDto.getEmail())
+            .switchIfEmpty(Mono.error(new InvalidCredentialsException()))
+            .flatMap(authenticationUserDto -> {
+                if (!passwordEncoder.matches(userInfoDto.getPassword(), authenticationUserDto.getPassword())) {
+                    return Mono.error(new InvalidCredentialsException());
+                }
 
-                                    return userAuthRepository.findByUserInfoId(userInfo.getUserInfoId())
-                                                    .collectList()
-                                                    .flatMap(auths -> {
-                                                            Authentication authentication = new UsernamePasswordAuthenticationToken(
-                                                                            userInfo.getUserId(),
-                                                                            null,
-                                                                            auths.stream()
-                                                                                            .map(auth -> new SimpleGrantedAuthority(
-                                                                                                            auth.getRole().toString()))
-                                                                                            .collect(Collectors
-                                                                                                            .toList()));
-
-                                                            String token = jwtTokenProvider
-                                                                            .createToken(authentication);
-
-                                                            return Mono.just(ResponseDto.create(token,
-                                                                            "loginSuccess",
-                                                                            HttpStatus.OK));
-                                                    });
-                            }); */
+                List<SimpleGrantedAuthority> authorities = authenticationUserDto.getUserAuths().stream()
+                .map(auth -> new SimpleGrantedAuthority("ROLE_" + auth.getRole().name()))
+                .collect(Collectors.toList());
+                var jwtRequestDto = JwtRequestDto.create(authenticationUserDto.getEmail(), authorities);
+                return Mono.<String>just(jwtTokenProvider.createToken(jwtRequestDto));
+        });
     }
 
     @Override
